Fix layout issue

--- a/stylesheets/cannot/_layout.sass
+++ b/stylesheets/cannot/_layout.sass
@@ -56,3 +56,4 @@ div.wrapper
   margin-right: auto
   min-width: $layout-width-min
   max-width: $layout-width-large
+  width: 100%
